2009-03-31  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  Makefile.am
		- Check D-Bus version; use different applet dbus conf files for
			D-Bus >= 1.2.6 which uses deny-by-default processing.  New
			conf file fixes issues with 'root' also being at_console,
			where at_console permissions would deny root access to 
			applet secrets

	* nm-applet.conf
		- Remove; now generated

	* nm-applet-pre-dbus-126.conf
		- D-Bus config for dbus < 1.2.6

	* nm-applet-dbus-126.conf
		- D-Bus config for dbus >= 1.2.6 (from Tambet)

2009-03-26  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- Explicitly allow 'root' to talk to the secrets interface.  Fixes a bug exposed
			in SUSE ConsoleKit packages that always treated 'root' as at_console when
			logged in once; when using explicit denials (which we're using here to
			ensure we don't expose distros shipping older D-Bus packages) and when
			permissions may overlap, as in the case of root being at_console, there
			needs to be an explicit allow in the right section too.  Thus when root is
			'at_console', root will still have access to secrets due to the explicit
			allow in the user=root section.

2009-03-20  Alexander Sack <asac@ubuntu.com>

	* src/applet.c
	  src/applet.h
		- (constructor): check whether the notification server supports
			actions
		- (applet_do_notify): don't set a notification if the notification
			server doesn't support them

2009-03-10  Claude Paroz  <claude@2xlibre.net>

	* src/connection-editor/ce-page-ppp.glade
	    - Remove translatable property on stock labels
	
	* src/connection-editor/page-ppp.c
	    - Add translator comment for 'none' string

2009-03-04  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.1-rc3 (0.7.0.99)

2009-03-03  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- CVE-2009-0578: restrict connection changes to applet user
		- (update, do_delete, is_user_authorized):  check UID of dbus request

2009-03-03  Dan Williams  <dcbw@redhat.com>
