@@ -1,5 +1,11 @@
 2009-03-31  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/nm-connection-list.c
+		- (add_connection_buttons, delete_selection_changed_cb): disable the
+			delete button when the connection is read-only
+
+2009-03-31  Dan Williams  <dcbw@redhat.com>
+
 	* configure.ac
 	  Makefile.am
 		- Check D-Bus version; use different applet dbus conf files for
